--- a/css/skel.css
+++ b/css/skel.css
@@ -67,6 +67,7 @@
 	.\-3u { margin-left: 25% }
 	.\-2u { margin-left: 16.6666666667% }
 	.\-1u { margin-left: 8.3333333333% }
+	.\-0u { width: 50%; margin: 0 auto;}
 
 	/* Rows */
 
